matrix-k8s/tpl_deploy-svc/middleware/log_collect/kibana/kibana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: default
  labels:
    component: kibana
spec:
  selector:
    component: kibana
  ports:
  - port: 80
    targetPort: 5601
    protocol: TCP
  type: LoadBalancer
status:
  loadBalancer: {}
